--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -7,3 +7,5 @@
   </div>
   <div>description: {{hero.description |uppercase}}</div>
 </div>
+<button type="button" (click)="goBack()">go back</button>
+<button type="button" (click)="save()">save</button>
