--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -8,14 +8,8 @@
     Add hero
   </button>
 </div>
-<!-- <div>
-  <label for="new-hero">Hero description:  </label>
-  <input id="new-hero" #heroDescription />
-  <button type="button" class="add-button" (click)="addD(heroDescription.value); heroDescription.value=''">
-    Add Description
-  </button>
-</div> -->
-<ul class="heroes">
+
+<ul class="heroes" *ngIf="isShowing">
   <li *ngFor="let hero of heroes">
     <a routerLink="/detail/{{hero.id}}">
       <span class="badge">{{hero.id}}</span> {{hero.name}}
@@ -24,3 +18,9 @@
     (click)="delete(hero)">x</button>
   </li>
 </ul>
+
+<!-- 顯示英雄 -->
+<button type="button" (click)="isShowing = !isShowing" >
+  <span *ngIf="!isShowing">Show Heroes</span>
+  <span *ngIf="isShowing">Hide Heroes</span>
+</button>
