--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -5,11 +5,13 @@
     <label for="hero-name">Hero name: </label>
     <input id="hero-name" [(ngModel)]="hero.name" placeholder="name">
   </div>
+  <br>
   <div>Description: {{hero.description |uppercase}}</div>
+  Image: <img src={{hero.image}}> <br>
 
   <!--Adding hero description-->
   <div>
-    <label for="hero-description">Hero description:  </label>
+    <label for="hero-description">Hero description: </label>
     <input id="hero-description" [(ngModel)]="hero.description" placeholder="description">
   </div>
 </div>
