--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,5 @@
 <h1>{{title}}</h1>
-<nav class="flex justify-between p-4 bg-purple-800 text-white">
-  <div>
-    Hero select
-  </div>
-  <div>
-    <button>My Heroes</button>
-  </div>
-</nav>
-<nav class=" p-4">
+<nav class="flex  p-4 bg-purple-800 text-white">
   <li>
     <a routerLink="/dashboard" style="text-decoration:none;">Dashboard</a>
   </li>
