--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 /* Application-wide Styles */
 h1 {
-  color: #369;
+  color: rgb(120, 0, 120);
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
 }
@@ -41,4 +41,12 @@ button:disabled {
 /* everywhere else */
 * {
   font-family: Arial, Helvetica, sans-serif;
+}
+li > a{
+  text-decoration:none ;
+  color: #eee;
+}
+nav{
+  justify-content: space-evenly;
+  background-color:rgb(120, 0, 120);
 }
