--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -23,8 +23,8 @@ h2 {
 }
 
 a {
-  background-color: #3f525c;
-  border-radius: 2px;
+  background-color:rgb(120, 0, 120);
+  border-radius: 10px;
   padding: 1rem;
   font-size: 1.2rem;
   text-decoration: none;
@@ -50,5 +50,5 @@ a {
 }
 
 a:hover {
-  background-color: black;
+  background-color: rgb(255, 4, 213);
 }
