--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -1,4 +1,10 @@
 /* HeroDetailComponent's private CSS styles */
+*{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 label {
   color: #435960;
   font-weight: bold;
@@ -8,6 +14,9 @@ input {
   padding: .5rem;
 }
 button {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
   margin-top: 20px;
   margin-right: .5rem;
   background-color: #eee;
@@ -23,3 +32,4 @@ button:disabled {
   color: #ccc;
   cursor: auto;
 }
+
