--- a/src/app/hero-search/hero-search.component.css
+++ b/src/app/hero-search/hero-search.component.css
@@ -45,3 +45,8 @@ ul.search-result {
   margin-top: 0;
   padding-left: 0;
 }
+*{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+}
