0928 add login/register

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,12 @@
   <li>
     <a routerLink="/heroes" style="text-decoration:none;">Heroes</a>
   </li>
+  <li>
+    <a routerLink="/login">Login</a>
+  </li>
+  <li>
+    <a routerLink="/register">Register</a>
+  </li>
 </nav>
 <div class=" p-4">
   <router-outlet></router-outlet>
