--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<h1>{{title}}</h1>
+<div class="title">
+  <h1>{{title}}</h1>
+  <div class="dark">
+    <button (click)="toggleDarkTheme()">Dark Theme</button>
+  </div>
+</div>
 <nav class="flex  p-4 bg-purple-800 text-white">
   <li>
     <a routerLink="/dashboard" style="text-decoration:none;">Dashboard</a>
@@ -17,3 +22,4 @@
   <router-outlet></router-outlet>
   <app-messages></app-messages>
 </div>
+<!-- <fa-icon [icon]="faCoffee"></fa-icon> -->
