--- a/src/app/hero-search/hero-search.component.css
+++ b/src/app/hero-search/hero-search.component.css
@@ -1,4 +1,9 @@
 /* HeroSearch private styles */
+*{
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
 label {
   display: block;
@@ -24,16 +29,14 @@ li {
   list-style-type: none;
 }
 .search-result li a {
-  border-bottom: 1px solid gray;
-  border-left: 1px solid gray;
-  border-right: 1px solid gray;
-  display: inline-block;
+  border :1px solid gray;
   width: 100%;
   max-width: 600px;
   padding: .5rem;
   box-sizing: border-box;
   text-decoration: none;
   color: black;
+  margin-left: 20px;
 }
 
 .search-result li a:hover {
@@ -45,8 +48,4 @@ ul.search-result {
   margin-top: 0;
   padding-left: 0;
 }
-*{
-  display:flex;
-  flex-direction: row;
-  justify-content: center;
-}
+
