--- a/src/app/arth/login/login.component.html
+++ b/src/app/arth/login/login.component.html
@@ -1,31 +1,31 @@
 <div class="flex justify-center">
-  <form  (ngSubmit)="submit()" #myForm="ngForm"
-    class="mt-20 rounded-lg border m-auto w-1/3">
+  <form (ngSubmit)="submit()" #myForm="ngForm" class="mt-20 rounded-lg border m-auto w-1/3">
     <h1 class="text-center">Login</h1>
     <div class="my-5 w-full">
       <label for="email">Email</label>
-      <input type="email" id="email"
-          class="p-2 rounded w-full border text-sm"
-          placeholder="Email Address" [(ngModel)]="form.email"
-          name="email" #email="ngModel" required>
+      <input type="email" id="email" class="p-2 rounded w-full border text-sm" placeholder="Email Address"
+        [(ngModel)]="form.email" name="email" #email="ngModel" required>
     </div>
-    <div  *ngIf="email.invalid && (email.dirty|| email.touched)" class="p-4 bg-red-300 text-red-800 rounded">
+    <div *ngIf="email.invalid && (email.dirty|| email.touched)" class="p-4 bg-red-300 text-red-800 rounded">
       Email must be valid
     </div>
     <div class="my-5 w-full">
       <label for="password">Password</label>
-      <input type="password" id="password"
-          class="p-2 rounded w-full border text-sm"
-          placeholder="Password" [(ngModel)]="form.password"
-          name="password" #password="ngModel" required>
+      <input type="password" id="password" class="p-2 rounded w-full border text-sm" placeholder="Password"
+        [(ngModel)]="form.password" name="password" #password="ngModel" required>
     </div>
-    <div  *ngIf="password.invalid && (password.dirty|| password.touched)" class="p-4 bg-red-300 text-red-800 rounded">
+    <div *ngIf="password.invalid && (password.dirty|| password.touched)" class="p-4 bg-red-300 text-red-800 rounded">
       Password must be valid
     </div>
     <div class="my-5 w-full">
-      <label for="password"></label>
-      <input type="submit"  [disabled]="myForm.form.invalid"
-      class="p-2 rounded w-full border" >
+      <button type="submit" [disabled]="myForm.form.invalid" class="p-2 rounded border">
+        <ng-container *ngIf="isLoading">
+          Loading...
+        </ng-container>
+        <ng-container *ngIf="!isLoading">
+          Submit
+        </ng-container>
+      </button>
     </div>
   </form>
 </div>
