--- a/src/app/arth/register/register.component.html
+++ b/src/app/arth/register/register.component.html
@@ -1,41 +1,41 @@
 <div class="flex  justify-center">
-  <form (ngSubmit)="submit()"  #myForm="ngForm"
-    class="p-4 mt-20 rounded-lg border m-auto w-1/3">
+  <form (ngSubmit)="submit()" #myForm="ngForm" class="p-4 mt-20 rounded-lg border m-auto w-1/3">
     <h1 class="text-center ">Register</h1>
-    <div  class="my-5 w-full">
+    <div class="my-5 w-full">
       <label for="email">Email</label>
-      <input type="email" id="email"
-          class="p-2 rounded w-full border text-sm"
-          placeholder="Email Address"[(ngModel)]="form.email"
-          name="email" #email="ngModel" required>
+      <input type="email" id="email" class="p-2 rounded w-full border text-sm" placeholder="Email Address"
+        [(ngModel)]="form.email" name="email" #email="ngModel" required>
     </div>
-    <div  *ngIf="email.invalid && (email.dirty|| email.touched)" class="p-4 bg-red-300 text-red-800 rounded">
+    <div *ngIf="email.invalid && (email.dirty|| email.touched)" class="p-4 bg-red-300 text-red-800 rounded">
       Email must be valid
     </div>
-    <div  class="my-5 w-full">
+    <div class="my-5 w-full">
       <label for="password">Password</label>
-      <input type="password" id="password"
-          class="p-2 rounded w-full border text-sm"
-          placeholder="Password" [(ngModel)]="form.password"
-          name="password" #password="ngModel" required>
+      <input type="password" id="password" class="p-2 rounded w-full border text-sm" placeholder="Password"
+        [(ngModel)]="form.password" name="password" #password="ngModel" required>
     </div>
-    <div  *ngIf="password.invalid && (password.dirty|| password.touched)" class="p-4 bg-red-300 text-red-800 rounded">
+    <div *ngIf="password.invalid && (password.dirty|| password.touched)" class="p-4 bg-red-300 text-red-800 rounded">
       Password must be valid
     </div>
-    <div  class="my-5 w-full">
+    <div class="my-5 w-full">
       <label for="password">Confirm Password</label>
-      <input type="password" id="Confirmpassword"
-          class="p-2 rounded w-full border text-sm"
-          placeholder="Confirm Passeord" [(ngModel)]="form.confirmPassword"
-          name="Confirmpassword" #ComfirmPassword="ngModel" required >
+      <input type="password" id="Confirmpassword" class="p-2 rounded w-full border text-sm"
+        placeholder="Confirm Passeord" [(ngModel)]="form.confirmPassword" name="Confirmpassword"
+        #ComfirmPassword="ngModel" required>
     </div>
-    <div  *ngIf="ComfirmPassword.invalid && (ComfirmPassword.dirty|| ComfirmPassword.touched)" class="p-4 bg-red-300 text-red-800 rounded">
+    <div *ngIf="ComfirmPassword.invalid && (ComfirmPassword.dirty|| ComfirmPassword.touched)"
+      class="p-4 bg-red-300 text-red-800 rounded">
       Confirm Password must be valid
     </div>
-    <div  class="my-5 w-full">
-      <label for="password"></label>
-      <input type="submit" [disabled]="myForm.form.invalid"
-      class="p-2 w-full">
+    <div class="my-5 w-full">
+      <button type="submit" [disabled]="myForm.form.invalid" class="p-2 rounded border">
+        <ng-container *ngIf="isLoading">
+          Loading...
+        </ng-container>
+        <ng-container *ngIf="!isLoading">
+          Submit
+        </ng-container>
+      </button>
     </div>
   </form>
 </div>
