--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -1,6 +1,6 @@
 /* HeroDetailComponent's private CSS styles */
-*{
-  display:flex;
+* {
+  display: flex;
   flex-direction: column;
   align-items: center;
 }
@@ -9,27 +9,30 @@ label {
   color: #435960;
   font-weight: bold;
 }
+
 input {
   font-size: 1em;
   padding: .5rem;
 }
+
 button {
-    display:flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: 20px;
   margin-right: .5rem;
-  background-color: #eee;
+  background-color: rgb(120, 0, 120);
   padding: 1rem;
   border-radius: 4px;
   font-size: 1rem;
 }
+
 button:hover {
-  background-color: #cfd8dc;
+  background-color: rgb(191, 0, 191);
 }
+
 button:disabled {
-  background-color: #eee;
+  background-color: rgb(192, 0, 192);
   color: #ccc;
   cursor: auto;
 }
-
