--- a/src/app/hero-detail/hero-detail.component.css
+++ b/src/app/hero-detail/hero-detail.component.css
@@ -36,3 +36,7 @@ button:disabled {
   color: #ccc;
   cursor: auto;
 }
+input {
+  color: var(--text-color);
+  background-color: var(--inp-bg-color);
+}
