--- a/src/app/hero-search/hero-search.component.css
+++ b/src/app/hero-search/hero-search.component.css
@@ -14,13 +14,14 @@ label {
 
 }
 input {
+  color: var(--text-color);
+  background-color: var(--inp-bg-color);
   padding: .5rem;
   width: 100%;
   max-width: 600px;
   box-sizing: border-box;
   display: block;
 }
-
 input:focus {
   outline: #336699 auto 1px;
 }
