--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -19,6 +19,7 @@
           <span class="badge">{{hero.id}}</span> {{hero.name | titlecase}}
         </a>
         <button type="button" class="delete" title="delete hero" (click)="delete(hero)">x</button>
+        <!-- <button type="button" class="addToCart" title="addToCart" (click)="addToCart()">ADD to Cart</button> -->
       </li>
     </ng-container>
   </ul>
